--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
-			padding-top: 80px;
+			padding-top: 90px;
 		}
 		
 		.img-responsive-overwrite {
@@ -84,7 +84,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/Gilgamesh/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> やさしいギルガメッシュ</h3>
+								<h3 class="panel-title panelHeader">やさしいギルガメッシュ</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -94,6 +94,7 @@
 							<div class="caption">
 								<p>剣で剣を捌くのは男のロマン</p>
 								<p>ゲート・オブ・バビロンを自作　慢心王を倒せ</p>
+								<p><a href="contents/Gilgamesh/index.html">続きを読む</a></p>
 								<p><small>2016/9</small></p>
 							</div>
 
@@ -104,7 +105,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/Fitter/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Fitter</h3>
+								<h3 class="panel-title panelHeader">Fitter</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -114,7 +115,8 @@
 							<div class="caption">
 								<p>大きさ合わせはデリケートな問題</p>
 								<p>物に大きさを合わせることに特化した3Dプリンターを開発</p>
-								<p><small>2016/3~</small></p>
+								<p><a href="contents/Fitter/index.html">続きを読む</a></p>
+								<p><span class="label label-info">研究</span> <small>2016/3~</small></p>
 							</div>
 
 						</div>
@@ -124,7 +126,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/kirbyPC/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> カービィでPC作ってみた</h3>
+								<h3 class="panel-title panelHeader">カービィでPC作ってみた</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -134,6 +136,7 @@
 							<div class="caption">
 								<p>はじめての自作PC</p>
 								<p>どうせなのでぬいぐるみをケースにしてみたけどホコリヤバそう</p>
+								<p><a href="contents/kirbyPC/index.html">続きを読む</a></p>
 								<p><small>2016/7</small></p>
 							</div>
 
@@ -144,7 +147,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/8mmFilm/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Bad Apple!! in 8mm Film</h3>
+								<h3 class="panel-title panelHeader">Bad Apple!! in 8mm Film</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -154,6 +157,7 @@
 							<div class="caption">
 								<p>Bad Apple!! 影絵を8mm映写機で再生</p>
 								<p>再生にはOHPシートにインクジェットプリンタで印刷した自作フィルムを使用した</p>
+								<p><a href="contents/8mmFilm/index.html">続きを読む</a></p>
 								<p><small>2016/5</small></p>
 							</div>
 
@@ -164,7 +168,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="https://github.com/gutugutu3030/gprintMode" target="_blank">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processing コンソールサーチモード</h3>
+								<h3 class="panel-title panelHeader">Processing コンソールサーチモード</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -174,6 +178,7 @@
 							<div class="caption">
 								<p>コンソールはただ表示するだけの箱ではない</p>
 								<p>コンソールをクリックするとそれがどこの記述によるものかを解析，記述地点にジャンプ</p>
+								<p><a href="https://github.com/gutugutu3030/gprintMode" target="_blank">続きを読む</a></p>
 								<p><small>2016/1</small></p>
 							</div>
 
@@ -184,7 +189,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/pinteraction/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> pinteraction</h3>
+								<h3 class="panel-title panelHeader">pinteraction</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -194,6 +199,7 @@
 							<div class="caption">
 								<p>電子工作を行い際に必ず電子部品の抜き差しをするはず</p>
 								<p>抜き差しをプログラミングに有効活用</p>
+								<p><a href="contents/pinteraction/index.html">続きを読む</a></p>
 								<p><small>2015/9~2016/3</small></p>
 							</div>
 
@@ -205,7 +211,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/DraggableBoard/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ドラッグで配線できる基板</h3>
+								<h3 class="panel-title panelHeader">ドラッグで配線できる基板</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -215,7 +221,8 @@
 							<div class="caption">
 								<p>なぞった部分にはリレーによって電気的な配線が行われ，通電するようになる</p>
 								<p>モータなどアクチュエータも動作可能</p>
-								<p><small>2015/12</small></p>
+								<p><a href="contents/DraggableBoard/index.html">続きを読む</a></p>
+								<p><span class="label label-info">研究</span> <small>2015/12</small></p>
 							</div>
 
 						</div>
@@ -225,7 +232,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/realtimeProcessing/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processing RealtimeMode</h3>
+								<h3 class="panel-title panelHeader">Processing RealtimeMode</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -235,6 +242,7 @@
 							<div class="caption">
 								<p>プログラムを書き始めるとすぐさま実行結果に反映される</p>
 								<p>Processing2のモードとして実装した</p>
+								<p><a href="contents/realtimeProcessing/index.html">続きを読む</a></p>
 								<p><small>2015/3</small></p>
 							</div>
 
@@ -245,7 +253,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/somen/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> 流しそうめん音ゲー</h3>
+								<h3 class="panel-title panelHeader">流しそうめん音ゲー</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -255,6 +263,7 @@
 							<div class="caption">
 								<p>音ゲーとそうめんは似ている</p>
 								<p>ステップマニアという音ゲーを流しそうめん化した</p>
+								<p><a href="contents/somen/index.html">続きを読む</a></p>
 								<p><small>2014/9</small></p>
 							</div>
 						</div>
@@ -281,7 +290,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="https://sites.google.com/site/gutugutu30/other/tenkiwojietishitegaizaosuru" target="_blank">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> オリジナルテンキー</h3>
+								<h3 class="panel-title panelHeader">オリジナルテンキー</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -291,6 +300,7 @@
 							<div class="caption">
 								<p>内部配線を導電性インクでハック</p>
 								<p>Arduinoとつなげて自由なキー割り当てを可能にした</p>
+								<p><a href="https://sites.google.com/site/gutugutu30/other/tenkiwojietishitegaizaosuru" target="_blank">続きを読む</a></p>
 								<p><small>2014/3</small></p>
 							</div>
 						</div>
@@ -300,7 +310,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/ProjectronMapping/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Projectron Mapping</h3>
+								<h3 class="panel-title panelHeader">Projectron Mapping</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -310,7 +320,8 @@
 							<div class="caption">
 								<p>ドラッグ操作による手軽な電子工作</p>
 								<p>プロジェクションマッピングによる電子部品の擬似動作を利用した</p>
-								<p><small>2013/10~2014/12</small></p>
+								<p><a href="contents/ProjectronMapping/index.html">続きを読む</a></p>
+								<p><span class="label label-info">研究</span> <small>2013/10~2014/12</small></p>
 							</div>
 						</div>
 					</div>
@@ -319,7 +330,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/duelDisk/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> デュエルディスク</h3>
+								<h3 class="panel-title panelHeader">デュエルディスク</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -329,6 +340,7 @@
 							<div class="caption">
 								<p>某アニメの決闘盤を再現</p>
 								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される(ソフトウェア担当)</p>
+								<p><a href="contents/duelDisk/index.html">続きを読む</a></p>
 								<p><small>2013/5</small></p>
 							</div>
 						</div>
@@ -338,7 +350,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" target="_blank">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Hako</h3>
+								<h3 class="panel-title panelHeader">Hako</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -348,6 +360,7 @@
 							<div class="caption">
 								<p>箱とARキャラクタとのインタラクション</p>
 								<p>AR棒人間がキックをすると現実世界上の箱が動く</p>
+								<p><a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" target="_blank">動画を見る</a></p>
 								<p><small>2012/11</small></p>
 							</div>
 						</div>
@@ -357,7 +370,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" target="_blank">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ARモデリングツール</h3>
+								<h3 class="panel-title panelHeader">ARモデリングツール</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -367,6 +380,7 @@
 							<div class="caption">
 								<p>3Dモデリングをなぜ2次元上でやらねばらないのか</p>
 								<p>ARで3Dモデリングを可能にした</p>
+								<p><a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" target="_blank">動画を見る</a></p>
 								<p><small>2012/9</small></p>
 							</div>
 						</div>
