--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -76,6 +76,12 @@
             <h1>Bad Apple!! in 8mm Film <small>OHPシートとインクジェットプリンタを用いた自作8mmフィルムの製作</small></h1>
 		</section>
 		<section>
+			<div class="alert alert-info">
+				<p>制作プロセスの動画を以下に上げています．一緒にご覧下さい．</p>
+				<a href="http://www.nicovideo.jp/watch/sm28876844" target="_blank" class="btn btn-info">解説動画</a>
+			</div>
+		</section>
+		<section>
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>概要</h2>
