--- a/library.html
+++ b/library.html
@@ -121,7 +121,10 @@
 							<h4>Download</h4>
 							<ul style="list-style-type:none;margin:0;padding:0;">
 								<li>
-									<a href="https://www.dropbox.com/s/0ekm3h81fiow7s7/s8pm.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a> サイレントフィルム　安定版
+									<a href="https://www.dropbox.com/s/0ekm3h81fiow7s7/s8pm.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a> サイレントフィルム　安定版　Windows
+								</li>
+								<li>
+									<a href="https://www.dropbox.com/s/b34hmq0zizx7bey/s8pm4mac.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a> サウンドフィルム　最新版　Mac
 								</li>
 								<li>
 									<a href="https://github.com/gutugutu3030/super8filmMaker" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> GitHub</a> サウンドフィルム　最新版
