--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -85,7 +85,7 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DO-5nfyj7cY" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HhyCbkTo0Os" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
