--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/PUI3DPrinter/index.html">
+								<h3 class="panel-title panelHeader">PUIのための3Dプリンタ</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/PUI3DPrinter/index.html">
+								<img src="contents/PUI3DPrinter/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>紙に描いた図面から造形できる3Dプリンタ</p>
+								<p>小学生から高齢者まで　PCの使えない人でも3Dプリンタが使える世界を目指す</p>
+								<p><a href="contents/PUI3DPrinter/index.html">続きを読む</a></p>
+								<p><span class="label label-info">研究</span> <small>2016/7~</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/Gilgamesh/index.html">
 								<h3 class="panel-title panelHeader">やさしいギルガメッシュ</h3>
 							</a>
@@ -131,7 +152,7 @@
 						</div>
 						<div class="panel-body">
 							<a href="contents/kirbyPC/index.html">
-								<img src="contents/kirbyPC/PC.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+								<img src="contents/kirbyPC/kuchi.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							</a>
 							<div class="caption">
 								<p>はじめての自作PC</p>
