--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -73,7 +73,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>3DプリンターのためのPaper User Interface <small>紙に描いた図面から造形できる3Dプリンタ</small></h1>
+			<h1>3DプリンタのためのPaper User Interface <small>紙に描いた図面から造形できる3Dプリンタ</small></h1>
 		</section>
 		<section>
 			<div class="row">
@@ -130,7 +130,8 @@
 		<section>
 			<h2>書誌情報</h2>
 			<ol>
-				<li></li>
+				<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface. 第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
+				</li>
 			</ol>
 		</section>
 	</div>
