--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<a href="contents/8mmFilm/index.html">
-								<img src="contents/8mmFilm/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/8mmFilm/badapple/index.html">
+								<img src="contents/8mmFilm/badapple/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							</a>
 							<div class="caption">
 								<p>Bad Apple!! 影絵を8mm映写機で再生</p>
 								<p>再生にはOHPシートにインクジェットプリンタで印刷した自作フィルムを使用した</p>
-								<p><a href="contents/8mmFilm/index.html">続きを読む</a></p>
+								<p><a href="contents/8mmFilm/badapple/index.html">続きを読む</a></p>
 								<p><small>2016/5</small></p>
 							</div>
 
