--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/8mmFilm/index.html">
-								<h3 class="panel-title panelHeader">Bad Apple!! in 8mm Film</h3>
+								<h3 class="panel-title panelHeader">自作8mmフィルムプロジェクト</h3>
 							</a>
 						</div>
 						<div class="panel-body">
-							<a href="contents/8mmFilm/badapple/index.html">
+							<a href="contents/8mmFilm/index.html">
 								<img src="contents/8mmFilm/badapple/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							</a>
 							<div class="caption">
-								<p>Bad Apple!! 影絵を8mm映写機で再生</p>
-								<p>再生にはOHPシートにインクジェットプリンタで印刷した自作フィルムを使用した</p>
-								<p><a href="contents/8mmFilm/badapple/index.html">続きを読む</a></p>
+								<p>OHPシートとインクジェットプリンタを用いて自作フィルムを作成</p>
+								<p>実際の8mm映写機での再生も確認</p>
+								<p><a href="contents/8mmFilm/index.html">続きを読む</a></p>
 								<p><small>2016/5</small></p>
 							</div>
 
