add nikkei kiji

--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -134,6 +134,13 @@
 				</li>
 			</ol>
 		</section>
+		<section>
+			<h2>その他</h2>
+			<ul>
+				<li>日経産業新聞で紹介されました！
+				</li>
+			</ul>
+		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
