--- a/profile.html
+++ b/profile.html
@@ -149,6 +149,8 @@
 				</li>
 				<li>メディア報道（新聞・テレビ）
 					<ol>
+						<li>「描いた絵→立体造形　明大　３Ｄプリンターで簡単に」, 日経産業新聞記事掲載, (2017年1月6日付).
+						</li>
 						<li>「明治大の３Ｄプリンター　形や大きさ，調整容易　タッチパネル使う試作機」, 日経産業新聞記事掲載, (2016年10月12日付).
 						</li>
 						<li>「【トレたま】コピー機感覚の３Ｄプリンター」, テレビ東京 WBS「トレンドたまご」取材, (2016年10月3日放送).
