--- a/contents/8mmFilm/badapple/index.html
+++ b/contents/8mmFilm/badapple/index.html
@@ -140,6 +140,7 @@
 				</li>
 			</ol>
 			<h2>その他</h2>
+			<ol><a href="../projector/index.html">映写機の自作</a>ol>
 			<ol>
 				<li>試行錯誤の過程（フィルムの詳細はこちら）
 					<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
