--- a/index.html
+++ b/index.html
@@ -83,6 +83,48 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/8mmFilm/projector/index.html">
+								<h3 class="panel-title panelHeader">ミニミニ8mm映写機</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/8mmFilm/projector/index.html">
+								<img src="contents/8mmFilm/projector/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>3Dプリンタとレーザカッターで8mmフィルム映写機を自作</p>
+								<p>約4秒の動画をループ再生可能</p>
+								<p><a href="contents/8mmFilm/projector/index.html">続きを読む</a></p>
+								<p><small>2017/1</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<a href="https://www.youtube.com/watch?v=eRLvTMQ5Emc" target="_blank">
+								<h3 class="panel-title panelHeader">Paper Battler</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="https://www.youtube.com/watch?v=eRLvTMQ5Emc" target="_blank">
+								<img src="contents/PaperBattler/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>紙に絵を描きキャラメイク　シールで武器の装備とワザの選択が行える</p>
+								<p>作った絵が敵と戦い出す</p>
+								<p><a href="https://www.youtube.com/watch?v=eRLvTMQ5Emc" target="_blank">動画を見る</a></p>
+								<p><small>2017/1</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/PUI3DPrinter/index.html">
 								<h3 class="panel-title panelHeader">PUIのための3Dプリンタ</h3>
 							</a>
