--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -79,15 +79,23 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>概要</h2>
-					<p>昨今，8mmフィルム映写機は製造されておらず，中古で買う映写機は重くて大きい．</p>
+					<p>昨今，8mmフィルム映写機は製造されておらず，中古で買う映写機は重くて大きい．また，現在PCなどで手軽に動画を視聴できるが，世界が破滅してこの世のすべてのトランジスタ・ICがイカれた場合，ほぼ全ての動画再生装置が使えなくなってしまう．</p>
                     <p>そこで，3Dプリンタとレーザカッターを用いて映写機を自作した．</p>
 					<p>今回は機構の簡易化のため，無限軌道のフィルムとした．</p>
 				</div>
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TqPrpoFX_pE" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cy_mY1iS7DA" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="thumbnail">
+				<img src="soul.png">
+				<div class="caption">
+					<p>映写機; 全体像・フィルムと投影装置・ジェネバ機構・スイッチ</p>
 				</div>
 			</div>
 		</section>
@@ -105,7 +113,27 @@
 					<h2>製作方法</h2>
 					<p>ギアの制作には3Dプリンタを用い，筐体の作成にはレーザカッターを用いた．筐体は2mmのアクリル板を，ギアにはPLAを用いた．動力にはタミヤの<a href="http://www.tamiya.com/japan/products/70190mini_multiratio/index.htm" target="_blank">ミニモーター多段ギヤボックス（12速）</a>（ギヤ比5.1:1）を用い，軸にはタミヤの3mmシャフトを用いた．</p>
 					<p>ギアの制作には<a href="http://www.knowhave.com/gear/indexjp.php" target="_blank">Gear Model For 3D Printer</a>を用いた．間欠運動にはジェネバ機構を採用した．これはクローによる間欠運動よりも簡単に設計できるからである．ジェネバ機構は<a href="http://www.thingiverse.com/thing:1994518" target="_blank">Thingiverseに上がっていたモデル</a>と先述のサイトで制作したギアを組み合わせて作成した．</p>
+					<p>使用したジェネバ機構はスロットが6つあるものである．フィルムを送るための歯車は1回転で30コマすすむ大きさに設定した．</p>
 				</div>
+				
+		</section>
+		<section>
+			<div class="col-sm-12">
+				<h2>工夫と想定外　あと感想</h2>
+
+				<p>アクリル板，透明のものしか用意しなかったため，遮光する必要がある前面を3Dプリンタで出そうとしたら歪んでどうにもならなかった．しょうがないからアクリル板で切ったが，アクリル板についてる茶色のシールを剥がさずに使えばいいことに気づいた．</p>
+				<p>現時点では歯車の位置をテキトーに決定しているため，ところどころかみ合わせが悪く，ジェネバ機構が噛み合う際に歯車が硬くなることがある．LEDとモータを並列にしていることも相まって，ジェネバ機構が噛み合う際，つまりフィルムが送られる際にモータに負荷がかかり，LEDに流れる電流が少なくなり，暗くなる（点滅する）ことが判明した．羽いらなかった．</p>
+				
+				<p></p>
+				<p>歯車を自作して物つくったの初めてだし，専門的な知識があんまりない状態だったけど，意外とテキトーでもうまくいった．ギアの設計はwebページで半自動だったし，ジェネバ機構はネットに上がっているのを流用できた．</p>
+				<p>こういうニッチな物って作りたいユーザ自身が作らないとプロとか含めてだれも作ってくれないから，素人でも使えるパーソナルファブリケーションの機械って大事だと思う．</p>
+				<p>まだまだ3Dプリンタとかは進化しないと行けないと思う．例えば，3DCAD上で3ミリの穴をあけても，実際に印刷してみると2.5ミリしか穴の大きさがない場合があった．こういうのはユーザが試行錯誤で求めるんじゃなくて，ノウハウを機械側がためておく方が自然だろう．</p>
+			</div>
+		</section>
+		<section>
+			<div class="col-sm-12">
+				<h2>その他</h2>
+				<ol><a href="../index.html">フィルムの自作</a><ol>
 			</div>
 		</section>
 	</div>
