--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -133,7 +133,7 @@
 		<section>
 			<div class="col-sm-12">
 				<h2>その他</h2>
-				<ol><a href="../index.html">フィルムの自作</a><ol>
+				<ol>フィルムの自作プロジェクトも行っております．ぜひ<a href="../index.html">こちら</a>も御覧ください．<ol>
 			</div>
 		</section>
 	</div>
