--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -76,6 +76,12 @@
             <h1>ミニミニ8mm映写機 <small>3Dプリンタとレーザカッターを用いた8mm映写機の自作</small></h1>
 		</section>
 		<section>
+			<div class="alert alert-info">
+				<p><!-- 3Dモデルデータとレーザーカッティングのパスデータと，-->組み立ての説明を公開しました．</p>
+				<!--<a href="http://www.nicovideo.jp/watch/sm28876844" target="_blank" class="btn btn-info">ダウンロード</a> --><a href="instruction/index.html" target="_blank" class="btn btn-info">組み立て説明</a>
+			</div>
+		</section>
+		<section>
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>概要</h2>
