--- a/contents/8mmFilm/projector/instruction/index.html
+++ b/contents/8mmFilm/projector/instruction/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Assembling Instructions of 8mm Film Projector</title>
+    <title>gutugutu3030 - Assembling Instructions of 8mm Film Projector</title>
     <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+    <link rel="shortcut icon" href="../../../../favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
