--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -77,8 +77,8 @@
 		</section>
 		<section>
 			<div class="alert alert-info">
-				<p><!-- 3Dモデルデータとレーザーカッティングのパスデータと，-->組み立ての説明を公開しました．</p>
-				<!--<a href="http://www.nicovideo.jp/watch/sm28876844" target="_blank" class="btn btn-info">ダウンロード</a> --><a href="instruction/index.html" target="_blank" class="btn btn-info">組み立て説明</a>
+				<p>3Dモデルデータとレーザーカッティングのパスデータと，組み立ての説明を公開しました．（組立説明書はロードに時間がかかります．）</p>
+				<a href="http://www.nicovideo.jp/watch/sm28876844" target="_blank" class="btn btn-info">ダウンロード</a> <a href="instruction/index.html" target="_blank" class="btn btn-info">組み立て説明</a>
 			</div>
 		</section>
 		<section>
