--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -78,7 +78,7 @@
 		<section>
 			<div class="alert alert-info">
 				<p>3Dモデルデータとレーザーカッティングのパスデータと，組み立ての説明を公開しました．（組立説明書はロードに時間がかかります．）</p>
-				<a href="http://www.nicovideo.jp/watch/sm28876844" target="_blank" class="btn btn-info">ダウンロード</a> <a href="instruction/index.html" target="_blank" class="btn btn-info">組み立て説明</a>
+				<a href="http://www.thingiverse.com/thing:2047226" target="_blank" class="btn btn-info">ダウンロード</a> <a href="instruction/index.html" target="_blank" class="btn btn-info">組み立て説明</a>
 			</div>
 		</section>
 		<section>
