--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/Theater/index.html">
+								<h3 class="panel-title panelHeader">Theater</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/Theater/index.html">
+								<img src="contents/Theater/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>おもちゃを3Dプリンタを使って作ってみた</p>
+								<p>ハンドルを回すとキャラクタが跳ねながら世界一周をする</p>
+								<p><a href="contents/Theater/index.html">続きを読む</a></p>
+								<p><small>2017/1~2017/2</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/8mmFilm/projector/index.html">
 								<h3 class="panel-title panelHeader">ミニミニ8mm映写機</h3>
 							</a>
