--- a/profile.html
+++ b/profile.html
@@ -96,6 +96,10 @@
 			</div>
 		</div>
 		<div>
+			<h2>作ったものリスト</h2>
+			<p><a href="index.html">こちら</a>をごらんください．</p>
+		</div>
+		<div>
 			<h2>Publications</h2>
 			<ul style="list-style-type:none;">
 				<li>査読付き学術論文
