--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -81,6 +81,10 @@
 				<a href="http://www.thingiverse.com/thing:2047226" target="_blank" class="btn btn-info">ダウンロード</a> <a href="instruction/index.html"
 					target="_blank" class="btn btn-info">組み立て説明</a>
 			</div>
+			<div class="alert alert-info">
+				<p>フィルムのかけかえ方の説明動画を公開しました．</p>
+				<a href="https://youtu.be/M8mY0K9LaLc" target="_blank" class="btn btn-info">動画</a>
+			</div>
 		</section>
 		<section>
 			<div class="row">
