--- a/profile.html
+++ b/profile.html
@@ -180,10 +180,15 @@
 						</li>
 					</ul>
 				</li>
-
-
 			</ul>
-
+		</div>
+		<div>
+			<h2>Awards</h2>
+			<ol>
+				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
+				<li><a href="http://ictco.jp/syousai.html?id=137" target="_blank">2016年9月17日 第二回　3D Printer Digging Festival　プラチナ賞　「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a></li>
+				<li>2017年3月17日 第１回みたかFabコンテスト　発展賞　「ミニミニ映写機」（予定）</li>
+			</ol>
 		</div>
 	</div>
 	<script src="js/jquery.min.js"></script>
