--- a/contents/somen/index.html
+++ b/contents/somen/index.html
@@ -99,6 +99,10 @@
 				<li>デイリーポータルＺで紹介されました！
 					<a style="word-break: break-all;" href="http://portal.nifty.com/kiji/140924165234_1.htm" target="_blank">http://portal.nifty.com/kiji/140924165234_1.htm</a>
 				</li>
+				<li>ねとらぼで紹介されました！
+					<a style="word-break: break-all;" href="http://nlab.itmedia.co.jp/nl/articles/1409/30/news159.html" target="_blank">http://nlab.itmedia.co.jp/nl/articles/1409/30/news159.html</a>
+
+				</li>
 			</ul>
 		</section>
 	</div>
