--- a/profile.html
+++ b/profile.html
@@ -187,7 +187,7 @@
 			<ol>
 				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
 				<li><a href="http://ictco.jp/syousai.html?id=137" target="_blank">2016年9月17日 第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a></li>
-				<li><a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">2017年3月17日 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」（予定）</a></li>
+				<li><a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">2017年3月17日 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a></li>
 			</ol>
 		</div>
 	</div>
