--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -73,7 +73,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>3DプリンタのためのPaper User Interface <small>紙に描いた図面から造形できる3Dプリンタ</small></h1>
+			<h1>3DプリンタのためのPaper User Interface <small>紙に描いた図面から造形できる3Dプリンタ</small></h1>
 		</section>
 		<section>
 			<div class="row">
@@ -139,6 +139,8 @@
 			<ul>
 				<li>日経産業新聞で紹介されました！
 				</li>
+				<li>ズームイン！！サタデーのフューチャリスタで取り上げられました！ <a href="http://www.fms-meiji.jp/archives/1191">http://www.fms-meiji.jp/archives/1191</a></li>
+				<li>ＺＩＰ！のな～るほどマスカレッジで取り上げられました！ <a href="http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html">http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html</a></li>
 			</ul>
 		</section>
 	</div>
