--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
 			<div class="col-sm-8">
 				<h2>秋山 耀 <small>Yoh Akiyama</small></h2>
 				<ul style="list-style-type:none;">
-					<li>明治大学大学院理工学研究科新領域創造専攻1年</li>
+					<li>明治大学大学院理工学研究科新領域創造専攻2年</li>
 					<li>学部生時代<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
 					<li><a href="http://miyashita.com/">宮下研究室</a>所属</li>
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
@@ -90,7 +90,7 @@
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java・Processing・Arduino(・mbed・nodeJS・puredata・HSP)</li>
 				</ul>
-				<p>最近は3Dプリンタ関係の研究をしています．そろそろ就活．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
+				<p>最近は3Dプリンタ関係の研究をしています．就活中．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
 					<a
 						href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
 			</div>
