--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua" target="_blank">
+								<h3 class="panel-title panelHeader">背負型3Dプリンタ</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua" target="_blank">
+								<img src="contents/mobileFabrication/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>3DプリンタとバッテリとPCを背負ってどこでも印刷</p>
+								<p>今回はお花見をしたお話</p>
+								<p><a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua" target="_blank">続きを読む</a></p>
+								<p><small>2017/3~2017/4</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			<div class="row-height grid">
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/Theater/index.html">
 								<h3 class="panel-title panelHeader">Theater</h3>
 							</a>
