--- a/profile.html
+++ b/profile.html
@@ -90,7 +90,7 @@
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java・Processing・Arduino(・mbed・nodeJS・puredata・HSP)</li>
 				</ul>
-				<p>最近は3Dプリンタ関係の研究をしています．就活中．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
+				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
 					<a
 						href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
 			</div>
