--- a/profile.html
+++ b/profile.html
@@ -100,6 +100,12 @@
 			<p><a href="index.html">こちら</a>をごらんください．</p>
 		</div>
 		<div>
+			<h2>お仕事</h2>
+			<ol>
+				<li>2017年7月24日 <a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a></li>
+			</ol>
+		</div>
+		<div>
 			<h2>Publications</h2>
 			<ul style="list-style-type:none;">
 				<li>査読付き学術論文
@@ -186,8 +192,8 @@
 			<h2>Awards</h2>
 			<ol>
 				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
-				<li><a href="http://ictco.jp/syousai.html?id=137" target="_blank">2016年9月17日 第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a></li>
-				<li><a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">2017年3月17日 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a></li>
+				<li>2016年9月17日 <a href="http://ictco.jp/syousai.html?id=137" target="_blank">第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a></li>
+				<li>2017年3月17日 <a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a></li>
 			</ol>
 		</div>
 	</div>
