--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・星の撮影</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
-					<li>使用可能言語・環境：Java・Processing・Arduino(・mbed・nodeJS・puredata・HSP)</li>
+					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
 				</ul>
 				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
 					<a
