--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	<div class="container">
 		<div>
 			<p>制作物一覧です．動画一覧は<a href="https://www.youtube.com/playlist?list=PLQyFKRbKsHDv9lAgn7kHZCq7V1gATlHlU" target="_Blank">こちら</a>．制作したライブラリ一覧は<a href="library.html">こちら</a>．</p>
+			<p>時間があれば<a href="timeline.html">こちら</a>もごらんください．</p>
 		</div>
 
 		<div class="row">
