--- a/profile.html
+++ b/profile.html
@@ -98,6 +98,7 @@
 		<div>
 			<h2>作ったものリスト</h2>
 			<p><a href="index.html">こちら</a>をごらんください．</p>
+			<p>時間があれば<a href="timeline.html">こちら</a>もごらんください．</p>
 		</div>
 		<div>
 			<h2>お仕事</h2>
