--- a/profile.html
+++ b/profile.html
@@ -84,6 +84,7 @@
 					<li>学部生時代<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
 					<li><a href="http://miyashita.com/">宮下研究室</a>所属</li>
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
+					<li>予定は<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo" target="_blank"><i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・星の撮影</li>
