--- a/contents/8mmFilm/game/index.html
+++ b/contents/8mmFilm/game/index.html
@@ -130,7 +130,7 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="thumbnail">
-						<img src="addCircuit.png">
+						<img src="AddCircuit.png">
 						<div class="caption">
 							<p>当たり判定の回路</p>
 						</div>
