--- a/qr.html
+++ b/qr.html
@@ -51,23 +51,25 @@
             </div>
         </header>
         <div class="container">
-            <div class="col-md-12">
-                <h3>リンク：<a href="/" id="data">ロード中...</a></h3>
+            <div class="row" id="main">
+                <div class="col-md-12">
+                    <h3>ロード中...</h3>
+                </div>
             </div>
-            <div class="col-md-12">
-                    <img src="timelineItem/amanogawa1.jpg" class="img-responsive img-responsive-overwrite">
-            </div>                    
         </div>
     </body>
     <script type="text/javascript">
         $.get("https://script.googleusercontent.com/macros/echo?user_content_key=nWY3Hz7YtGcOBaYzHq8B_fmqtEIf3dQN7WVWoikShB22P69Ls4QRVxZUDG3X5Gr7oF4kjm88xnKUyWjnO411ZhuFm5o2jw10m5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnPe3sUsAKc7lpUPI30OmE1QNGiwQcW9hO5jOV091LPc2pwXHM1tque563uStV80xpMDyOw0rRDtU&lib=Ma5avj4HuM6XliiQgOJGGym05Xyz2F5qi",
-            function (data) {
-                if (data != "") {
-                    $("#data").text(data);
-                    $("#data").attr("href", data);
+            function (d) {
+                var data = JSON.parse(d);
+                if (data.mode == "url") {
+                    $("#main").html('<div class="col-md-12"><h3>リンク：<a href="' + data.url + '">' + data.url + '</a></h3></div>');
+                    $("#main").append('<div class="col-md-12"><img src="timelineItem/amanogawa1.jpg" class="img-responsive img-responsive-overwrite"></div>');
+                } else if (data.mode == "namecard") {
+                    $("#main").html('<div class="col-sm-4"><img class="img-rounded img-responsive" src="https://i.gyazo.com/804a79643f699169848444347f03c57b.png" /></div>');
+                    $("#main").append('<div class="col-sm-8"><h2>秋山 耀 <small>Yoh Akiyama</small></h2><ul style="list-style-type:none;"><li><i class="glyphicon glyphicon-envelope"></i> akyoh9933あっとgmail.com</li><li><i class="fa fa-twitter"></i> <a href="https://twitter.com/gutugutu3030">@gutugutu3030</a></li><li><a href="/">Web（作ったもの一覧）</a></ul><p>'+data.word+'</p></div>');
                 } else {
-                    $("#data").text("現在共有したいURLはありません，ざんねん．");
-                    $("#data").attr("href", "/");
+                    $("#main").html('<div class="col-md-12"><h3>いま共有したいコンテンツはありません，ざんねん</h3></div>');
                 }
             });
     </script>
