--- a/qr.html
+++ b/qr.html
@@ -42,10 +42,33 @@
                     <div class="navbar-header">
                         <a href="/" class="navbar-brand">gutugutu3030</a>
                         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="navbar-collapse collapse" id="navbar-main">
+                        <ul class="nav navbar-nav">
+                            <li class="active dropdown">
+                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="index.html">Products</a></li>
+                                    <li><a href="library.html">Libraries</a></li>
+                                </ul>
+                            </li>
+
+
+                            <li class="dropdown">
+                                <a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="profile.html">日本語</a></li>
+                                    <li><a href="profileEng.html">English</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
+                            <li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -67,7 +90,10 @@
                     $("#main").append('<div class="col-md-12"><img src="timelineItem/amanogawa1.jpg" class="img-responsive img-responsive-overwrite"></div>');
                 } else if (data.mode == "namecard") {
                     $("#main").html('<div class="col-sm-4"><img class="img-rounded img-responsive" src="https://i.gyazo.com/804a79643f699169848444347f03c57b.png" /></div>');
-                    $("#main").append('<div class="col-sm-8"><h2>秋山 耀 <small>Yoh Akiyama</small></h2><ul style="list-style-type:none;"><li><i class="glyphicon glyphicon-envelope"></i> akyoh9933あっとgmail.com</li><li><i class="fa fa-twitter"></i> <a href="https://twitter.com/gutugutu3030">@gutugutu3030</a></li><li><a href="/">Web（作ったもの一覧）</a></ul><p>'+data.word+'</p></div>');
+                    $("#main").append('<div class="col-sm-8"><h2>秋山 耀 <small>Yoh Akiyama</small></h2><ul style="list-style-type:none;"><li><i class="glyphicon glyphicon-envelope"></i> akyoh9933あっとgmail.com</li><li><i class="fa fa-twitter"></i> <a href="https://twitter.com/gutugutu3030">@gutugutu3030</a></li><li><a href="/">Web（作ったもの一覧）</a></ul><p>' + data.word + '</p></div>');
+                } else if (data.mode == "html") {
+                    $("#main").html('<div class="col-md-12"><h3>共有します～！</div>');
+                    $("#main").append(data.html);
                 } else {
                     $("#main").html('<div class="col-md-12"><h3>いま共有したいコンテンツはありません，ざんねん</h3></div>');
                 }
