--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -171,6 +171,13 @@
 				</li>
 			</ul>
 		</section>
+
+		<section>
+			<div class="alert alert-info">
+				<p>プロジェクトソースコードを公開しました．</p>
+				<a href="https://github.com/gutugutu3030/Fitter" target="_blank" class="btn btn-info">ソースコード</a>
+			</div>
+		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
