--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -143,6 +143,12 @@
 				<li>ＺＩＰ！のな～るほどマスカレッジで取り上げられました！ <a href="http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html">http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html</a></li>
 			</ul>
 		</section>
+		<section>
+			<div class="alert alert-info">
+				<p>プロジェクトソースコードを公開しました．</p>
+				<a href="https://github.com/gutugutu3030/Paper3dModeler" target="_blank" class="btn btn-info">ソースコード</a>
+			</div>
+		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
