--- a/profile.html
+++ b/profile.html
@@ -14,14 +14,14 @@
 		body {
 			padding-top: 80px;
 		}
-		
+
 		ol li {
 			list-style-type: none;
 			list-style-position: inside;
 			counter-increment: cnt;
 			margin-bottom: 0.5em;
 		}
-		
+
 		ol li:before {
 			display: marker;
 			content: "[" counter(cnt) "] ";
@@ -84,7 +84,8 @@
 					<li>学部生時代<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
 					<li><a href="http://miyashita.com/">宮下研究室</a>所属</li>
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
-					<li>予定は<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo" target="_blank"><i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
+					<li>予定は<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo"
+						 target="_blank"><i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・星の撮影</li>
@@ -92,8 +93,7 @@
 					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
 				</ul>
 				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
-					<a
-						href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
+					<a href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
 			</div>
 		</div>
 		<div>
@@ -105,6 +105,7 @@
 			<h2>お仕事</h2>
 			<ol>
 				<li>2017年7月24日 <a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a></li>
+				<li>2017年9月22日 <a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a></li>
 			</ol>
 		</div>
 		<div>
@@ -185,6 +186,9 @@
 					<ul style="list-style-type:none;">
 						<li>卒論　部分グラフ同型アルゴリズムの実装と回路理解支援システムへの応用.
 							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+						</li>
+						<li>新たな技術を福祉にいかす体験ワークショップ, 研究事例紹介, (2017年9月6日).
+							<a href="http://goodjobcenter.com/topics/report/959/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 						</li>
 					</ul>
 				</li>
