--- a/contents/8mmFilm/game/index.html
+++ b/contents/8mmFilm/game/index.html
@@ -195,6 +195,14 @@
 				<p>マイコンできないからって電子工作を躊躇している人はモーターとスイッチと電池を買って遊んでみてほしい．<small>そんでもってマイコンやパソコンが便利なことを学ぶといいのかもｗ</small></p>
 			</div>
 		</section>
+		<section>
+			<h2>その他</h2>
+			<ul>
+				<li>デイリーポータルＺで紹介されました！
+					<a style="word-break: break-all;" href="http://portal.nifty.com/kiji/171005200841_1.htm" target="_blank">http://portal.nifty.com/kiji/171005200841_1.htm</a>
+				</li>
+			</ul>
+		</section>
 		</div>
 		<script src="../../,,/js/jquery.min.js"></script>
 		<script src="../../../js/bootstrap.min.js"></script>
