--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								</div>
 								<div class="panel-body">
 									<a href="contents/Fitter/index.html">
-								<img src="contents/Fitter/system.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+								<img src="contents/Fitter/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							</a>
 									<div class="caption">
 										<p>大きさ合わせはデリケートな問題</p>
