--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - 3DプリンタのためのPaper User Interface</title>
+	<title>gutugutu3030 - Pocon</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
